--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,16 @@
+@font-face {
+    font-family: "Raleway";
+    src: url("../fonts/Raleway-ExtraLight.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Raleway-Bold";
+    src: url("../fonts/Raleway-Bold.ttf") format("truetype");
+}
+
 html, body {
     background-color: #eaeaea;
+    font-family: Raleway;
 }
 
 /* Convenient CSS to use */
