--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@
 }
 
 body {
+    min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
 	background: url("../images/photo_bg.jpg")center fixed;
 	background-size: cover;
 	font-size: 16px;
@@ -11,7 +18,6 @@ body {
 	font-weight: 250;
 	margin: 0;
 	color: #666;
-    padding-top: 150px;
 }
 
 /* Typography */
