--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -74,9 +74,32 @@
     font-size: 0.4em;
 }
 
-#hidden-cap:hover, #js-edit-goal-cap:hover {
+#hidden-cap:hover, #js-edit-goal-cap:hover, .shown-cap:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.goal-cap-input {
+    width: 50px;
+    height: 80px;
+    font-size: 2.2em;
+    padding-left: 15px;
+    display: inline-block;
+    margin: 10px 10px;
+}
+
+.goal-cap-form-group {
+    margin: 0 auto;
+    text-align: center; 
+}
+
+.goal-cap-form-group > label {
+    display: block;
+    text-align: left;
+}
+
+.modal-footer {
+    clear: both;
 }
 
 /* Sugeestion CSS */
