--- a/css/review.css
+++ b/css/review.css
@@ -173,7 +173,7 @@
 }
 
 .search-review-box, .filter-box {
-    height: 180px;
+    height: 200px;
 }
 
 #sem-taken-filter, #diff-filter, #recommendation-filter, #rate-difficulty, #rate-recommendation {
@@ -183,4 +183,21 @@
 
 ul {
     list-style-type: none;
+}
+
+#submit-review-btn {
+    margin-left: 20px;
+}
+
+#clear-filter:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+hr {
+    width: 900px;
+    border: none;
+    height: 1px;
+    /* Set the hr color */
+    background-color: #333; /* Modern Browsers */
 }
